--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
-.container {
+.dynamic-container {
   width: 1200px;
   margin: 0 auto; 
   height: 400px; 
 }
-.left {
+.dynamic-left {
   float: left;
   width: 29%; 
   display: inline; 
   background: grey; 
   height: 150px;
 }
-#right {
+#dynamic-right {
   float:left;
   width: 70%; 
   display: inline; 
